--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -16,19 +16,17 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '20.x'
-          
+
       - name: Build Docker Image
-        run: run: docker build -t registry.heroku.com/heroku-deploy/web .
-      
+        run: docker build -t registry.heroku.com/${{ secrets.APP_NAME }}/web .
+
       - name: Login to the Heroku Container Registry
         run: heroku container:login
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
 
       - name: Push Docker Image to Image Hub
-        run: docker push registry.heroku.com/heroku-deploy/web
+        run: docker push registry.heroku.com/${{ secrets.APP_NAME }}/web
 
       - name: Release Docker Image to Heroku
-        run: heroku container:release web -a heroku-deploy
-
-      
+        run: heroku container:release web -a ${{ secrets.APP_NAME }}
