--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: '20.x'
 
       - name: Build Docker Image
-        run: docker build -t registry.heroku.com/${{ secrets.APP_NAME }}/web .
+        run: echo ${{ secrets.APP_NAME }} && docker build -t registry.heroku.com/${{ secrets.APP_NAME }}/web .
 
       - name: Login to the Heroku Container Registry
         run: heroku container:login
@@ -30,3 +30,5 @@ jobs:
 
       - name: Release Docker Image to Heroku
         run: heroku container:release web -a ${{ secrets.APP_NAME }}
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
