--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: '20.x'
 
       - name: Build Docker Image
-        run: echo ${{ secrets.APP_NAME }} && docker build -t registry.heroku.com/${{ secrets.APP_NAME }}/web .
+        run: echo App::${{ secrets.APP_NAME }} && docker build -t registry.heroku.com/${{ secrets.APP_NAME }}/web .
 
       - name: Login to the Heroku Container Registry
         run: heroku container:login
