--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -18,7 +18,10 @@ jobs:
           node-version: '20.x'
 
       - name: Build Docker Image
-        run: echo App::${{ secrets.APP_NAME }} && docker build -t registry.heroku.com/${{ secrets.APP_NAME }}/web .
+        run: docker build -t registry.heroku.com/${{ secrets.APP_NAME }}/web .
+
+      - name: List Docker Image
+        run: docker images
 
       - name: Login to the Heroku Container Registry
         run: heroku container:login
@@ -30,5 +33,3 @@ jobs:
 
       - name: Release Docker Image to Heroku
         run: heroku container:release web -a ${{ secrets.APP_NAME }}
-        env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
