--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: '20.x'
 
       - name: Build Docker Image
-        run: docker build -t registry.heroku.com/${{ secrets.APP_NAME }}/web .
+        run: docker build -t registry.heroku.com/heroku-deploy/web .
 
       - name: Login to the Heroku Container Registry
         run: heroku container:login
@@ -27,6 +27,10 @@ jobs:
 
       - name: Push Docker Image to Image Hub
         run: docker push registry.heroku.com/heroku-deploy/web
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
 
       - name: Release Docker Image to Heroku
         run: heroku container:release web -a heroku-deploy
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
