--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -17,19 +17,22 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: Build Docker Image
-        run: docker build -t registry.heroku.com/heroku-deploy/web .
+      # - name: Build Docker Image
+      #   run: docker build -t registry.heroku.com/heroku-deploy/web .
 
       - name: Login to the Heroku Container Registry
         run: heroku container:login
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
 
-      - name: Push Docker Image to Image Hub
-        run: docker push registry.heroku.com/heroku-deploy/web
+      - name: Create container on Heroku
+        run: heroku create --stack container
 
-      - name: Set app Stack to container
-        run: heroku stack:set container -a heroku-deploy
+      - name: Push Docker Image to Image Hub
+        run: heroku container:push web -a heroku-deploy
+
+      # - name: Set app Stack to container
+      #   run: heroku stack:set container -a heroku-deploy
 
       - name: Release Docker Image to Heroku
         run: heroku container:release web -a heroku-deploy
