--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -5,14 +5,14 @@ on:
   push:
     branches:
       - main
-
-build:
-  runs-on: ubuntu-22.04
-  steps:
-    - uses: actions/checkout@v2
-    - uses: akhileshns/heroku-deploy@v3.13.15 # This is the action
-      with:
-        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-        heroku_app_name: 'deploy-heroku' #Must be unique in Heroku
-        heroku_email: ${{secrets.HEROKU_EMAIL}}
-        usedocker: true
+jobs:
+  build:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.13.15 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: 'deploy-heroku' #Must be unique in Heroku
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
+          usedocker: true
