--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -8,25 +8,12 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v2
-
-      - name: Use Node.js
-        uses: actions/setup-node@v2
+      - uses: akhileshns/heroku-deploy@v3.13.15 # This is the action
         with:
-          node-version: '20.x'
-
-      - name: Build Docker Image
-        run: docker build -t registry.heroku.com/heroku-deploy/web .
-
-      - name: Login to the Heroku Container Registry
-        run: heroku container:login
-        env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-
-      - name: Push Docker Image to Image Hub
-        run: heroku container:push web -a heroku-deploy
-
-      - name: Release Docker Image to Heroku
-        run: heroku container:release web -a heroku-deploy
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: heroku-deploy #Must be unique in Heroku
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
+          usedocker: true
